--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -1,6 +1,11 @@
 <div class="sidebar">
   <div class="container sidebar-sticky">
     <div class="sidebar-about">
+
+      <img src="{{ site.baseurl }}/assets/images/kyi_profile.png"
+           alt="YoungIn Kim"
+           class="avatar">
+
       <h1>
         <a href="{{ site.baseurl }}">
           {{ site.title }}
