--- a/public/css/hyde.css
+++ b/public/css/hyde.css
@@ -53,11 +53,12 @@ html {
  * out above content in mobile and later moves to the side with wider viewports.
  */
 
-.avatar {
+ .avatar {
   display: block;
   margin: 0 auto 1rem;
-  width: 96px;
-  height: 96px;
+  width: 35%;
+  max-width: 120px;
+  aspect-ratio: 1 / 1;
   border-radius: 50%;
   object-fit: cover;
 }
