--- a/public/css/hyde.css
+++ b/public/css/hyde.css
@@ -56,9 +56,8 @@ html {
  .avatar {
   display: block;
   margin: 0 auto 1rem;
-  width: 35%;
-  max-width: 120px;
-  aspect-ratio: 1 / 1;
+  width: 5rem;
+  height: 5rem;
   border-radius: 50%;
   object-fit: cover;
 }
